tests/negative/semantic/while_condition_array/input.ci
void main() {
    int[] xs = [1];
    while (xs) { print("x\n"); }
}
